# agentic-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: failure-modes.md
eval_data/: qa_100.jsonl
eval_results/: benchmark_retrieval.json  benchmark_workflows.json  rrf_sensitivity.json  supervisor_analysis.json
scripts/: benchmark_retrieval.py  benchmark_rrf_sensitivity.py  benchmark_supervisor.py  benchmark_workflows.py  demo.py
src/agents/: analysis_agent.py  base.py  generator.py  hallucination_checker.py  quality_agent.py  query_analyzer.py  query_rewriter.py  query_router.py  relevance_grader.py  research_agent.py  retriever.py  supervisor.py  web_search.py
src/api/: dedup.py  human_review.py  main.py  middleware.py  streaming.py
src/eval/: ab_testing.py  comparative_eval.py  drift_detector.py  ragas_eval.py
src/finetuning/: embedding_ft.py  qlora_dpo.py
src/gateway/: cost_tracker.py  guardrails.py  llm_gateway.py  model_registry.py  output_scanner.py  pii_detector.py  prompt_store.py  rate_limiter.py  security.py
src/graph/: multi_agent_workflow.py  research_subgraph.py  simple_workflow.py  state.py
src/observability/: __init__.py  metrics.py  tracing.py
src/retrieval/: bm25_retriever.py  cache.py  chunker.py  circuit_breaker.py  compressor.py  dense_retriever.py  graph_retriever.py  memory.py  models.py  multi_granularity_retriever.py  parallel_retriever.py  semantic_cache.py
src/utils/: llm.py
tests/unit/: conftest.py  test_ab_testing.py  test_backoff.py  (+33 more)
